force-app/main/default/objects/Proposed_Rate__c.object
<CustomObject>
    <description>Proposed Rate Information For Proposed Quote Plans</description>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Plan__c</fullName>
        <label>Proposed Plan</label>
        <referenceTo>Proposed_Plan__c</referenceTo>
        <relationshipLabel>Proposed Rates</relationshipLabel>
        <relationshipName>Proposed_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Tier__c</fullName>
        <label>Rate Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Tier</fullName>
                </value>
                <value>
                    <fullName>Two Tier</fullName>
                </value>
                <value>
                    <fullName>Three Tier</fullName>
                </value>
                <value>
                    <fullName>Four Tier</fullName>
                </value>
                <value>
                    <fullName>Five Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_And_Child__c</fullName>
        <label>Subscriber And Child</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Spouse__c</fullName>
        <label>Subscriber And Spouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_and_Children__c</fullName>
        <label>Subscriber and Children</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Proposed Rate</label>
    <nameField>
        <displayFormat>PR-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposed Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>